--- a/ch02/01_main-chapter-code/exercise-solutions.ipynb
+++ b/ch02/01_main-chapter-code/exercise-solutions.ipynb
@@ -68,15 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "7614337f-f639-42c9-a99b-d33f74fa8a03",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-15T01:08:14.544805Z",
+     "start_time": "2025-03-15T01:08:13.457921Z"
+    }
+   },
    "source": [
     "import tiktoken\n",
     "\n",
     "tokenizer = tiktoken.get_encoding(\"gpt2\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -278,10 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "id": "4d50af16-937b-49e0-8ffd-42d30cbb41c9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-15T01:25:23.459234Z",
+     "start_time": "2025-03-15T01:25:22.349377Z"
+    }
+   },
    "source": [
     "import tiktoken\n",
     "import torch\n",
@@ -336,7 +344,9 @@
     "\n",
     "token_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
     "pos_embedding_layer = torch.nn.Embedding(vocab_size, output_dim)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
