--- a/ch04/01_main-chapter-code/exercises.ipynb
+++ b/ch04/01_main-chapter-code/exercises.ipynb
@@ -2,26 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba450fb1-8a26-4894-ab7a-5d7bfefe90ce",
-   "metadata": {},
-   "source": [
-    "<table style=\"width:100%\">\n",
-    "<tr>\n",
-    "<td style=\"vertical-align:middle; text-align:left;\">\n",
-    "<font size=\"2\">\n",
-    "Supplementary code for the <a href=\"http://mng.bz/orYv\">Build a Large Language Model From Scratch</a> book by <a href=\"https://sebastianraschka.com\">Sebastian Raschka</a><br>\n",
-    "<br>Code repository: <a href=\"https://github.com/rasbt/LLMs-from-scratch\">https://github.com/rasbt/LLMs-from-scratch</a>\n",
-    "</font>\n",
-    "</td>\n",
-    "<td style=\"vertical-align:middle; text-align:left;\">\n",
-    "<a href=\"http://mng.bz/orYv\"><img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/cover-small.webp\" width=\"100px\"></a>\n",
-    "</td>\n",
-    "</tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "51c9672d-8d0c-470d-ac2d-1271f8ec3f14",
    "metadata": {},
    "source": [
@@ -33,8 +13,8 @@
    "id": "5b2fac7a-fdcd-437c-b1c4-0b35a31cd489",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:12:56.737789Z",
-     "start_time": "2025-04-14T02:12:56.732902Z"
+     "end_time": "2025-04-14T02:48:36.257561Z",
+     "start_time": "2025-04-14T02:48:36.251120Z"
     }
    },
    "source": [
@@ -51,7 +31,7 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -66,8 +46,8 @@
    "id": "2751b0e5-ffd3-4be2-8db3-e20dd4d61d69",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:02.732652Z",
-     "start_time": "2025-04-14T02:12:59.950555Z"
+     "end_time": "2025-04-14T02:48:37.586541Z",
+     "start_time": "2025-04-14T02:48:37.554205Z"
     }
    },
    "source": [
@@ -113,15 +93,15 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "1bcaffd1-0cf6-4f8f-bd53-ab88a37f443e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:05.112393Z",
-     "start_time": "2025-04-14T02:13:05.107762Z"
+     "end_time": "2025-04-14T02:48:39.315721Z",
+     "start_time": "2025-04-14T02:48:39.311257Z"
     }
    },
    "source": [
@@ -137,15 +117,15 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "c1dd06c1-ab6c-4df7-ba73-f9cd54b31138",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:06.311746Z",
-     "start_time": "2025-04-14T02:13:06.306360Z"
+     "end_time": "2025-04-14T02:48:40.316437Z",
+     "start_time": "2025-04-14T02:48:40.306937Z"
     }
    },
    "source": [
@@ -161,41 +141,7 @@
      ]
     }
    ],
-   "execution_count": 4
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15463dec-520a-47b4-b3ad-e180394fd076",
-   "metadata": {},
-   "source": [
-    "- The results above are for a single transformer block\n",
-    "- Optionally multiply by 12 to capture all transformer blocks in the 124M GPT model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "597e9251-e0a9-4972-8df6-f280f35939f9",
-   "metadata": {},
-   "source": [
-    "**Bonus: Mathematical breakdown**\n",
-    "\n",
-    "- For those interested in how these parameter counts are calculated mathematically, you can find the breakdown below (assuming `emb_dim=768`):\n",
-    "\n",
-    "\n",
-    "Feed forward module:\n",
-    "\n",
-    "- 1st `Linear` layer: 768 inputs × 4×768 outputs + 4×768 bias units = 2,362,368\n",
-    "- 2nd `Linear` layer: 4×768 inputs × 768 outputs + 768 bias units = 2,360,064\n",
-    "- Total:  1st `Linear` layer + 2nd `Linear` layer = 2,362,368 + 2,360,064 = 4,722,432\n",
-    "\n",
-    "Attention module:\n",
-    "\n",
-    "- `W_query`: 768 inputs × 768 outputs = 589,824 \n",
-    "- `W_key`: 768 inputs × 768 outputs = 589,824\n",
-    "- `W_value`: 768 inputs × 768 outputs = 589,824 \n",
-    "- `out_proj`: 768 inputs × 768 outputs + 768 bias units = 590,592\n",
-    "- Total: `W_query` + `W_key` + `W_value` + `out_proj` = 3×589,824 + 590,592 = 2,360,064 "
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -206,38 +152,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "310b2e05-3ec8-47fc-afd9-83bf03d4aad8",
-   "metadata": {},
-   "source": [
-    "- **GPT2-small** (the 124M configuration we already implemented):\n",
-    "    - \"emb_dim\" = 768\n",
-    "    - \"n_layers\" = 12\n",
-    "    - \"n_heads\" = 12\n",
-    "\n",
-    "- **GPT2-medium:**\n",
-    "    - \"emb_dim\" = 1024\n",
-    "    - \"n_layers\" = 24\n",
-    "    - \"n_heads\" = 16\n",
-    "\n",
-    "- **GPT2-large:**\n",
-    "    - \"emb_dim\" = 1280\n",
-    "    - \"n_layers\" = 36\n",
-    "    - \"n_heads\" = 20\n",
-    "\n",
-    "- **GPT2-XL:**\n",
-    "    - \"emb_dim\" = 1600\n",
-    "    - \"n_layers\" = 48\n",
-    "    - \"n_heads\" = 25"
-   ]
-  },
-  {
    "cell_type": "code",
    "id": "90185dea-81ca-4cdc-aef7-4aaf95cba946",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:13.504878Z",
-     "start_time": "2025-04-14T02:13:13.497474Z"
+     "end_time": "2025-04-14T02:48:41.556201Z",
+     "start_time": "2025-04-14T02:48:41.550729Z"
     }
    },
    "source": [
@@ -298,15 +218,15 @@
     "    print(f\"Total size of the model: {total_size_mb:.2f} MB\")"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "2587e011-78a4-479c-a8fd-961cc40a5fd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:26.112317Z",
-     "start_time": "2025-04-14T02:13:16.438034Z"
+     "end_time": "2025-04-14T02:49:12.035138Z",
+     "start_time": "2025-04-14T02:48:44.048768Z"
     }
    },
    "source": [
@@ -352,7 +272,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -367,8 +287,8 @@
    "id": "5fee2cf5-61c3-4167-81b5-44ea155bbaf2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:31.269220Z",
-     "start_time": "2025-04-14T02:13:31.252012Z"
+     "end_time": "2025-04-14T02:49:45.493162Z",
+     "start_time": "2025-04-14T02:49:45.473692Z"
     }
    },
    "source": [
@@ -385,15 +305,15 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "5aa1b0c1-d78a-48fc-ad08-4802458b43f7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:33.028374Z",
-     "start_time": "2025-04-14T02:13:33.009853Z"
+     "end_time": "2025-04-14T02:49:46.986239Z",
+     "start_time": "2025-04-14T02:49:46.973826Z"
     }
    },
    "source": [
@@ -459,15 +379,15 @@
     "        return logits"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "id": "1d013d32-c275-4f42-be21-9010f1537227",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T02:13:37.617980Z",
-     "start_time": "2025-04-14T02:13:36.790068Z"
+     "end_time": "2025-04-14T02:49:50.449491Z",
+     "start_time": "2025-04-14T02:49:49.610592Z"
     }
    },
    "source": [
@@ -477,26 +397,14 @@
     "model = GPTModel(GPT_CONFIG_124M)"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "display_name": "Python 3 (ipykernel)"
   }
  },
  "nbformat": 4,
